--- a/res/xml/options.xml
+++ b/res/xml/options.xml
@@ -13,11 +13,16 @@
 	android:entryValues="@array/qualities"
 	android:key="quality"
 	android:defaultValue="85"/>
+<CheckBoxPreference
+    android:title="Can save destination"
+    android:key="allowSave"
+    android:defaultValue="false"
+    android:summary="If you always share to the same destination app, check this box and you can set it next time you share. To unset, go to Settings>Apps, choose your destination app and clear its defaults."/>
 <CheckBoxPreference 
     android:title="Use content provider"
     android:key="contentProvider"
     android:defaultValue="false"
-    android:summary="GMail on Android 6 needs you to either check this or go to Settings&#8594;Apps&#8594;Gmail&#8594;Permissions and enable the 'Storage' permission manually. This may reduce compatibility with some other apps."/>
+    android:summary="GMail on Android 6 needs you to either check this or go to Settings>Apps>Gmail>Permissions and enable the 'Storage' permission manually. This may reduce compatibility with some other apps."/>
 <PreferenceScreen 
     android:title="How to use"
     android:summary="Just choose Send Reduced when sharing your photo, and you'll be asked which app to send it with after reduction. You can also attach photos to emails or texts by choosing Send Reduced." 
@@ -65,7 +70,7 @@
   <PreferenceCategory android:title="Licenses and copyrights">
     <PreferenceScreen
             android:title="View information">
-        <intent android:action="mobi.omegacentauri.SendReduced.LICENSE"/>
+        <intent android:action="mobi.omegacentauri.SendReduced_pro.LICENSE"/>
         </PreferenceScreen>
         </PreferenceCategory> 
 </PreferenceScreen>
