--- a/SendReduced/src/main/res/xml/options.xml
+++ b/SendReduced/src/main/res/xml/options.xml
@@ -39,7 +39,7 @@
     android:key="upgrade"
     />
 
-<PreferenceCategory 
+<PreferenceCategory
     android:key="outputPrivacy"
     android:title="Output privacy settings"
     >
@@ -50,10 +50,6 @@
 	android:entryValues="@array/outputs"
 	android:key="output"
 	android:defaultValue="random"/>
-<CheckBoxPreference
-    android:title="Include GPS location"
-    android:key="exifLocation"
-    android:defaultValue="false"/>
 <CheckBoxPreference
     android:title="Include EXIF location data"
     android:key="exifLocation"
@@ -70,6 +66,12 @@
     android:title="Include EXIF Camera settings"
     android:key="exifSettings"
     android:defaultValue="false"/>
+<CheckBoxPreference
+	android:title="Super strip (experimental)"
+	android:key="superStrip"
+	android:defaultValue = "false"
+	android:summary="Strip all non-image data from file for privacy. The EXIF options will be ignored. May improve compatibility with older Windows systems."
+	/>
 </PreferenceCategory>
 
   <PreferenceCategory android:title="Licenses and copyrights">
